Fixed up alignments

--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,30 @@ img {
 
 strong { font-weight: var(--fw-bold); }
 
+:focus {
+    outline: 3px solid var(--clr-accent);
+    outline-offset: 3px;
+}
+
+.btn {
+    display: inline-block;
+    padding: .5em 2.5em;
+    background: var(--clr-accent);
+    color: var(--clr-dark);
+    text-decoration: none;
+    cursor: pointer;
+    font-size: .8rem;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-weight: var(--fw-bold);
+    transition: transform 200ms ease-in-out;
+
+}
+
+.btn:hover {
+    transform: scale(1.1);
+}
+
 h1,
 h2,
 h3 {
@@ -103,11 +127,9 @@ nav { display: none; }
     box-shadow: var(--bs);
 }
 
-/*
 .section__subtitle--intro {
     display: inline-block;
 }
-*/
 
 @media (min-width: 600px){
     .intro {
@@ -140,8 +162,59 @@ nav { display: none; }
 }
 
 .my_projects {
-    background-color: var(--clr-dark);
+    background-color: var(--clr-accent);
     background-image: url(../images/matrix.png);
     background-size: cover;
+    background-blend-mode: multiply;
     color: var(--clr-light);
+    text-align: center;
+}
+
+.section__title--projects {
+    color: var(--clr-accent);
+    position: relative;
+}
+
+.section__title--projects::after {
+    content: '';
+    display: block;
+    width: 25%;
+    height: 1px;
+    margin: 0.5em auto 1em;
+    background: currentColor;
+    opacity: 0.5;
+}
+
+.projects {
+    margin-bottom: 4em;
+}
+
+.project {
+    max-width: 500px;
+    margin: 0 auto;
+}
+
+@media(min-width: 800px) {
+    .project {
+        display: block;
+        max-width: 1000px;
+        margin: 0 auto;
+        position: center;
+        text-align: center;
+    }
+
+    .project__img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .project + .project {
+        margin-top: 2em;
+    }
+}
+
+.about-me {
+    max-width: 10000px;
+    margin: 0 auto;
 }
